# vw-crash-to-repair-simulator

./: .env.example  .gitignore  AGENT_CONTEXT.md  BEAMNG_TROUBLESHOOTING.md  CODEOWNERS  CODE_REVIEW_REPORT.md  DEVELOPER_GUIDE.md  MIGRATION_STATUS.md  Makefile  PHASE2_PROGRESS.md  PROJECT_BOARD.md  README.md  TESTING_DATA.md  VW Brand Day Dealer Invoice Simulator.md.rtf  api_integration_test.py  cloudbuild-prod.yaml  cloudbuild.yaml  demo.sh  docker-compose.yml  fix_api_dependencies.py  frontend_backend_integration_test.py  frontend_fixes_validation_test.py  project-architecture-guide.md  requirements.txt  setup.sh  start.sh  task_manager.py  task_manager.sh  tasks.json
backend/: .env.example  API_ENDPOINTS_SUMMARY.md  Dockerfile  SERVICE_LAYER_SUMMARY.md  alembic.ini  pyproject.toml  seed_data.py  seed_database.py
backend/alembic/: env.py
backend/alembic/versions/: 500d63b16700_initial_schema_with_all_models.py
backend/sql/: init.sql
backend/src/: __init__.py  config.py  database.py  main.py
backend/src/api/: dependencies.py
backend/src/api/v1/: appointments.py  beamng.py  damage.py  dealers.py  estimates.py  health.py  parts.py  router.py  vehicles.py
backend/src/integrations/: __init__.py
backend/src/models/: appointment.py  base.py  damage.py  dealer.py  part.py  vehicle.py
backend/src/repositories/: __init__.py  appointment.py  base.py  damage_report.py  dealer.py  part.py  vehicle.py
backend/src/schemas/: appointment.py  beamng.py  damage.py  dealer.py  part.py  vehicle.py
backend/src/services/: __init__.py  appointment.py  base.py  beamng.py  damage_report.py  dealer.py  part.py  vehicle.py
backend/src/utils/: exceptions.py  logging.py
backend/tests/: conftest.py
backend/tests/unit/test_services/: test_health.py
beamng-mod/: README.md
beamng-mod/vw_damage_reporter/: config.lua  mod_info.json
beamng-mod/vw_damage_reporter/lua/vehicle/extensions/: vw_damage_reporter.lua
beamng-mod/vw_damage_reporter/lua/vehicle/extensions/auto/: vwDamageReporter.lua
config/: config.yaml
docs/: ARCHITECTURE.md  BEAMNG_INSTALLATION.md  BEAMNG_INTEGRATION_PLAN.md  DOMAIN_MODEL.md  MIGRATION_PLAN.md  PROGRESS.md  TASK_MANAGEMENT.md
docs/adr/: 000-template.md  001-zustand-for-state.md  002-brl-only-pricing.md  003-beamng-websocket.md  004-api-response-format.md  005-agent-coordination.md
frontend/: .env.development  .env.example  .env.production  .gcloudignore  Dockerfile  cloudbuild-dev.yaml  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  AppRouter.tsx  Router.tsx  index.css  vite-env.d.ts
frontend/src/components/: ConnectionStatus.tsx  DemoModeOverlay.tsx  DemoModeToggle.tsx  Header.tsx  Layout.tsx  Sidebar.tsx  VehicleSelector.tsx
frontend/src/config/: api.config.ts
frontend/src/hooks/: useDemoMode.tsx
frontend/src/pages/: AnalysisPage.tsx  AppointmentPage.tsx  DamageReportsPage.tsx  DealerNetworkPage.tsx  LandingPage.tsx  PartsPage.tsx  ResultsPage.tsx  SimulationPage.tsx  VehicleManagementPage.tsx  WelcomePage.tsx
frontend/src/services/: api.ts  appointmentService.ts  beamngService.ts  damageService.ts  dealerService.ts  estimateService.ts  partService.ts  vehicleService.ts
frontend/src/store/: AppProvider.tsx  useAppStore.ts
frontend/src/types/: index.ts
src/: config.py  models.py
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  appointments.py  damage.py  damage_enhanced.py  dealers.py  estimates.py  health.py  tasks.py
src/beamng/: __init__.py  simulator.py
src/frontend/: index.html  kanban.html
src/frontend/static/css/: styles.css
src/frontend/static/js/: api.js  app.js
src/services/: __init__.py  beamng_service.py
terraform/: README.md  main.tf  outputs.tf  variables.tf
terraform/environments/: dev.tfvars  prod.tfvars
terraform/modules/cloud-run/: main.tf
terraform/modules/cloud-sql/: main.tf
terraform/modules/redis/: main.tf
