[tool.poetry]
name = "vw-crash-to-repair-backend"
version = "2.0.0"
description = "VW Brand Day Crash-to-Repair Simulator Backend - FastAPI with modern architecture"
authors = ["Object Edge Development Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
# FastAPI and ASGI
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
gunicorn = "^21.2.0"

# Database and ORM
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
alembic = "^1.12.1"

# Redis for caching
redis = "^5.0.1"
aioredis = "^2.0.1"

# Pydantic for data validation and settings
pydantic = {extras = ["email"], version = "^2.5.0"}
pydantic-settings = "^2.1.0"

# HTTP client
httpx = "^0.25.2"
aiohttp = "^3.9.1"

# Authentication and security
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

# Brazilian specific libraries
#python-cpf = "^1.4.0"
#python-cnpj = "^2.2.0"
# brazilcep = "^4.4.0"  # Commented out due to compatibility issues

# Logging and monitoring
structlog = "^23.2.0"
python-json-logger = "^2.0.7"

# Utilities
python-dotenv = "^1.0.0"
pendulum = "^2.1.2"
babel = "^2.13.1"

# BeamNG integration (assuming a custom package or direct implementation)
websockets = "^12.0"
msgpack = "^1.0.7"
psycopg2-binary = "^2.9.11"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-xdist = "^3.5.0"
httpx = "^0.25.2"  # For testing API endpoints

# Linting and formatting
ruff = "^0.1.6"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"

# Development tools
pre-commit = "^3.6.0"
ipython = "^8.17.2"
rich = "^13.7.0"

# Type stubs
types-redis = "^4.6.0.11"
types-requests = "^2.31.0.10"
types-python-jose = "^3.3.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
    "beamng: Tests requiring BeamNG connection",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "src/main.py",
    "tests/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "N",  # pep8-naming
    "S",  # flake8-bandit
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "S104",  # hardcoded bind all interfaces
    "S101",  # use of assert
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["S101", "S106", "S311", "T201"]
"migrations/**/*" = ["T201"]

[tool.black]
target-version = ["py310"]
line-length = 100
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true